# ciudad3d-mcp

./: .env.example  .gitignore  Procfile  README.md  ciudad3d_mcp.py  database.py  main.py  pyproject.toml  railway.json  railway.scraper.json  report_generator.py  requirements.txt  run_scraper.bat  scraper.py  scraper_scheduler.py  setup-github.ps1  tools.py  web.py
static/: index.html
